--- a/Styles/global__custom__properties.css
+++ b/Styles/global__custom__properties.css
@@ -1,7 +1,19 @@
 :root {
+  /* spacings */
+  --wrapper-container-padding:1rem 2rem;
+  --primary-btn-padding:0.8rem 2.8rem;
+
+  /* widths */
+  --wrapper-container-maxwidth:110rem;
+
+  /* typography */
+  --ff-Poppins: "Poppins", sans-serif;
+
   /* colors */
-  --body-bg:#F1EDF5;
+  --clr-body-bg:hsl(270, 29%, 95%),hsl(270, 6%, 81%);
+  --clr-white:hsl(0,100%,100%);
+  --clr-logo:hsl(0, 0%, 15%);
+  --clr-bg-primarybtn:hsl(241, 70%, 60%);
+  --clr-primarybtn:hsl(250, 72%, 93%);
 }
-
-
 
