--- a/Styles/global__custom__properties.css
+++ b/Styles/global__custom__properties.css
@@ -5,6 +5,7 @@
 
   /* widths */
   --wrapper-container-maxwidth:110rem;
+  --header-searchbar-width:35rem;
 
   /* typography */
   --ff-Poppins: "Poppins", sans-serif;
@@ -12,7 +13,11 @@
   /* colors */
   --clr-body-bg:hsl(270, 29%, 95%),hsl(270, 6%, 81%);
   --clr-white:hsl(0,100%,100%);
-  --clr-logo:hsl(0, 0%, 15%);
+  --clr-text-primary:hsl(0, 0%, 15%);
+  --clr-text-secondary:hsl(240, 5%, 81%);  
+
+  --clr-header-searchbar-bg:hsl(240, 17%, 94%);
+
   --clr-bg-primarybtn:hsl(241, 70%, 60%);
   --clr-primarybtn:hsl(250, 72%, 93%);
 }
