--- a/Styles/output.css
+++ b/Styles/output.css
@@ -2,16 +2,20 @@
   position: fixed
 }
 
+.absolute {
+  position: absolute
+}
+
+.relative {
+  position: relative
+}
+
 .me-auto {
   margin-inline-end: auto
 }
 
 .ms-auto {
   margin-inline-start: auto
-}
-
-.block {
-  display: block
 }
 
 .flex {
@@ -22,14 +26,6 @@
   width: 100%
 }
 
-.flex-grow {
-  flex-grow: 1
-}
-
-.grow {
-  flex-grow: 1
-}
-
 .items-center {
   align-items: center
 }
@@ -38,28 +34,12 @@
   justify-content: space-between
 }
 
-.gap-2\.5 {
-  gap: 0.625rem
-}
-
-.gap-4 {
-  gap: 1rem
-}
-
-.gap-5 {
-  gap: 1.25rem
-}
-
-.gap-6 {
-  gap: 1.5rem
+.gap-10 {
+  gap: 2.5rem
 }
 
 .gap-7 {
   gap: 1.75rem
-}
-
-.gap-8 {
-  gap: 2rem
 }
 
 .overflow-hidden {
@@ -70,9 +50,12 @@
   border-radius: 9999px
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity))
+.rounded-2xl {
+  border-radius: 1rem
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem
 }
 
 .text-3xl {
@@ -80,19 +63,10 @@
   line-height: 2.25rem
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem
-}
-
-.font-semibold {
-  font-weight: 600
-}
-
 .font-bold {
   font-weight: 700
 }
 
-.font-medium {
-  font-weight: 500
+.font-semibold {
+  font-weight: 600
 }
