--- a/Styles/main__styles.css
+++ b/Styles/main__styles.css
@@ -4,13 +4,20 @@
   padding: var(--wrapper-container-padding);
 }
 
-/* header */
-.header {
-  background-color: var(--clr-white);
+.sidebar:not(.primary-sidebar){
+  padding:var(--sidebar-padding);
 }
 
+.primary-sidebar > *{
+  padding:var(--sidebar-padding);
+  border-radius:var(--sidebar-radius);
+}
+
+/* header */
 .user-profile {
-  width: 3.5rem;
+  --width:4rem;
+
+  width: var(--width);
   aspect-ratio: 1/1;
 }
 
@@ -37,6 +44,21 @@
 
   left: var(--left-pos);
   top: var(--top-pos);
+}
+
+/* main */
+.main-container {
+  padding-block-start:6rem;
+}
+
+.main-container > .wrapper-container{
+  grid-template-columns:var(--main-wrapper-columns);
+  gap:var(--main-wrapper-gap);
+}
+
+/* primary sidebar */
+.primary-sidebar .user-profile {
+  --width:3.5rem;
 }
 
 /* media queries */
