--- a/Styles/output.css
+++ b/Styles/output.css
@@ -1,3 +1,37 @@
+.container {
+  width: 100%
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px
+  }
+}
+
 .fixed {
   position: fixed
 }
@@ -22,8 +56,20 @@
   display: flex
 }
 
+.grid {
+  display: grid
+}
+
 .w-full {
   width: 100%
+}
+
+.shrink-0 {
+  flex-shrink: 0
+}
+
+.flex-wrap {
+  flex-wrap: wrap
 }
 
 .items-center {
@@ -38,8 +84,8 @@
   gap: 2.5rem
 }
 
-.gap-7 {
-  gap: 1.75rem
+.gap-6 {
+  gap: 1.5rem
 }
 
 .overflow-hidden {
@@ -48,14 +94,6 @@
 
 .rounded-full {
   border-radius: 9999px
-}
-
-.rounded-2xl {
-  border-radius: 1rem
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem
 }
 
 .text-3xl {
