--- a/Styles/global__custom__properties.css
+++ b/Styles/global__custom__properties.css
@@ -1,12 +1,14 @@
 :root {
   /* spacings */
   --wrapper-container-padding: 1rem 2rem;
-  --primary-btn-padding: 0.8rem 3rem;
+  --primary-btn-padding: 1rem 3rem;
+  --main-container-padding-block:6rem;
 
   --main-wrapper-gap: 1rem;
   --main-wrapper-columns: 23% 1fr 23%;
 
-  --sidebar-padding: 1.2rem 1.5rem;
+  --sidebar-padding-block: 1.3rem;
+  --sidebar-padding-inline: 1.5rem;
   --sidebar-radius: 1rem;
 
   /* widths */
@@ -19,11 +21,10 @@
   /* colors */
   --clr-body-bg: hsl(270, 29%, 95%), hsl(270, 6%, 81%);
   --clr-primary-bg: hsl(0, 100%, 100%);
+  --clr-secondary-bg:hsl(240, 17%, 94%);
   --clr-text-primary: hsl(0, 0%, 15%);
   --clr-text-secondary: hsl(240, 5%, 81%);
 
-  --clr-header-searchbar-bg: hsl(240, 17%, 94%);
-
-  --clr-bg-primarybtn: hsl(241, 70%, 60%);
+  --clr-font-theme: hsl(241, 70%, 60%);
   --clr-primarybtn: hsl(250, 72%, 93%);
 }
