--- a/Styles/output.css
+++ b/Styles/output.css
@@ -1,37 +1,3 @@
-.container {
-  width: 100%
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px
-  }
-}
-
 .fixed {
   position: fixed
 }
@@ -68,6 +34,10 @@
   flex-shrink: 0
 }
 
+.cursor-pointer {
+  cursor: pointer
+}
+
 .flex-wrap {
   flex-wrap: wrap
 }
@@ -88,12 +58,44 @@
   gap: 1.5rem
 }
 
+.gap-7 {
+  gap: 1.75rem
+}
+
+.gap-5 {
+  gap: 1.25rem
+}
+
+.gap-8 {
+  gap: 2rem
+}
+
+.gap-9 {
+  gap: 2.25rem
+}
+
+.gap-12 {
+  gap: 3rem
+}
+
 .overflow-hidden {
   overflow: hidden
 }
 
 .rounded-full {
   border-radius: 9999px
+}
+
+.ps-3 {
+  padding-inline-start: 0.75rem
+}
+
+.ps-5 {
+  padding-inline-start: 1.25rem
+}
+
+.ps-4 {
+  padding-inline-start: 1rem
 }
 
 .text-3xl {
@@ -103,6 +105,10 @@
 
 .font-bold {
   font-weight: 700
+}
+
+.font-medium {
+  font-weight: 500
 }
 
 .font-semibold {
