--- a/Styles/custom__utility__classes.css
+++ b/Styles/custom__utility__classes.css
@@ -6,6 +6,10 @@
   color:var(--clr-text-secondary);
 }
 
+.text-light {
+  color:var(--clr-text-light);
+}
+
 .primary-bg {
   background-color:var(--clr-primary-bg);
 }
