--- a/Styles/output.css
+++ b/Styles/output.css
@@ -10,12 +10,56 @@
   position: relative
 }
 
+.sticky {
+  position: sticky
+}
+
+.isolate {
+  isolation: isolate
+}
+
+.z-10 {
+  z-index: 10
+}
+
+.z-20 {
+  z-index: 20
+}
+
+.z-50 {
+  z-index: 50
+}
+
+.-z-10 {
+  z-index: -10
+}
+
+.-z-0 {
+  z-index: 0
+}
+
 .me-auto {
   margin-inline-end: auto
 }
 
 .ms-auto {
   margin-inline-start: auto
+}
+
+.mt-3 {
+  margin-top: 0.75rem
+}
+
+.mt-6 {
+  margin-top: 1.5rem
+}
+
+.mt-4 {
+  margin-top: 1rem
+}
+
+.inline {
+  display: inline
 }
 
 .flex {
@@ -30,6 +74,11 @@
   width: 100%
 }
 
+.min-w-fit {
+  min-width: -moz-fit-content;
+  min-width: fit-content
+}
+
 .shrink-0 {
   flex-shrink: 0
 }
@@ -38,8 +87,20 @@
   cursor: pointer
 }
 
+.cursor-move {
+  cursor: move
+}
+
+.flex-col {
+  flex-direction: column
+}
+
 .flex-wrap {
   flex-wrap: wrap
+}
+
+.items-start {
+  align-items: flex-start
 }
 
 .items-center {
@@ -54,6 +115,10 @@
   gap: 2.5rem
 }
 
+.gap-4 {
+  gap: 1rem
+}
+
 .gap-6 {
   gap: 1.5rem
 }
@@ -62,20 +127,24 @@
   gap: 1.75rem
 }
 
+.gap-3 {
+  gap: 0.75rem
+}
+
 .gap-5 {
   gap: 1.25rem
 }
 
-.gap-8 {
-  gap: 2rem
+.gap-2 {
+  gap: 0.5rem
 }
 
-.gap-9 {
-  gap: 2.25rem
+.self-end {
+  align-self: flex-end
 }
 
-.gap-12 {
-  gap: 3rem
+.justify-self-end {
+  justify-self: end
 }
 
 .overflow-hidden {
@@ -86,21 +155,36 @@
   border-radius: 9999px
 }
 
-.ps-3 {
-  padding-inline-start: 0.75rem
+.rounded {
+  border-radius: 0.25rem
 }
 
-.ps-5 {
-  padding-inline-start: 1.25rem
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity))
 }
 
-.ps-4 {
-  padding-inline-start: 1rem
+.bg-cover {
+  background-size: cover
+}
+
+.bg-center {
+  background-position: center
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover
 }
 
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem
 }
 
 .font-bold {
@@ -113,4 +197,8 @@
 
 .font-semibold {
   font-weight: 600
+}
+
+.uppercase {
+  text-transform: uppercase
 }
