--- a/Styles/reset.css
+++ b/Styles/reset.css
@@ -54,9 +54,17 @@ textarea {
   font: inherit;
 }
 
+input {
+  font-size: 1.2rem;
+}
+
+input:focus-visible {
+  outline:none;
+}
+
 :focus-visible {
-  outline: 2px solid black;
-  outline-offset: 0.3rem;
+  outline: 1px solid hsla(0, 0%, 0%, 0.4);
+  outline-offset: 0.5rem;
 }
 
 html {
