--- a/Styles/main__styles.css
+++ b/Styles/main__styles.css
@@ -9,7 +9,7 @@
 }
 
 .main-container .wrapper-container {
-  align-items:start;
+  align-items: start;
 }
 
 /* header */
@@ -36,23 +36,27 @@
 
 /* notifications */
 .notification__wrapper {
-  --notifications-width:35rem;
-  --top-pos:0%;
-  --left-pos:110%;
+  --notifications-width: 35rem;
+  --top-pos: 0%;
+  --left-pos: 110%;
 
-  width:var(--notifications-width);
-  top:var(--top-pos);
-  left:var(--left-pos);
-  padding:2rem 1.5rem;
-  border-radius:1rem;
+  width: var(--notifications-width);
+  top: var(--top-pos);
+  left: var(--left-pos);
+  padding: 2rem 1.5rem;
+  border-radius: 1rem;
+  display: none;
+}
+
+.notification__wrapper.show {
+  display: grid;
 }
 
 .notification__user-profile {
-  --width:3rem;
+  --width: 3rem;
 
-  width:var(--width);
+  width: var(--width);
 }
-
 
 /* main */
 .main-container {
@@ -67,7 +71,7 @@
 
 /* primary sidebar */
 .primary-sidebar {
-  top:calc(var(--main-container-padding-block) + 1rem);
+  top: calc(var(--main-container-padding-block) + 1rem);
 }
 
 .primary-sidebar .user-profile {
@@ -103,6 +107,10 @@
   transition: background-color 200ms ease, width 200ms ease;
 }
 
+.nav__item:first-child {
+  border-radius: calc(var(--sidebar-radius));
+}
+
 .nav__item:is(:hover, :focus, :focus-visible) {
   background-color: var(--clr-secondary-bg);
 }
@@ -113,98 +121,97 @@
 
 /* main content */
 .stories {
-  --grid-template-columns:repeat(6,1fr);
+  --grid-template-columns: repeat(6, 1fr);
 
-  grid-template-columns:var(--grid-template-columns);
+  grid-template-columns: var(--grid-template-columns);
 }
 
 .story__wrapper {
-  border-radius:1rem;
+  border-radius: 1rem;
 }
 
 .story__user__profile {
-  --width:3.2rem;
+  --width: 3.2rem;
 
-  width:var(--width);
-  aspect-ratio:1/1;
-  border:3px solid var(--clr-font-theme);
+  width: var(--width);
+  aspect-ratio: 1/1;
+  border: 3px solid var(--clr-font-theme);
 }
 
 .story__wrapper {
-  --story-minheight:17rem;
+  --story-minheight: 17rem;
 
-  padding:1.2rem 0.8rem;
-  min-height:var(--story-minheight);
+  padding: 1.2rem 0.8rem;
+  min-height: var(--story-minheight);
 }
 
 .story__username {
-  color:hsl(0,100%,100%);
+  color: hsl(0, 100%, 100%);
 }
 
 .post-input-wrapper {
   padding: 1.3rem 0rem 1.3rem 6rem;
-  border-radius:2rem;
+  border-radius: 2rem;
 }
-.post-input-wrapper > .user-profile{
-  --width:3rem;
-  --left-pos:15px;
-  --top-pos:50%;
-  
-  left:var(--left-pos);
-  top:var(--top-pos);
-  transform:translate(0,-50%);
+.post-input-wrapper > .user-profile {
+  --width: 3rem;
+  --left-pos: 15px;
+  --top-pos: 50%;
+
+  left: var(--left-pos);
+  top: var(--top-pos);
+  transform: translate(0, -50%);
 }
 
 .post__btn {
-  --right-pos:15px;
-  --top-pos:50%;
+  --right-pos: 15px;
+  --top-pos: 50%;
   --primary-btn-padding: 0.7rem 3rem;
-  
-  right:var(--right-pos);
-  top:var(--top-pos);
-  transform:translate(0,-50%);
+
+  right: var(--right-pos);
+  top: var(--top-pos);
+  transform: translate(0, -50%);
 }
 
 /* feeds */
 .feed {
-  --padding:1.3rem;
+  --padding: 1.3rem;
 
-  padding:var(--padding);
-  border-radius:0.8rem;
+  padding: var(--padding);
+  border-radius: 0.8rem;
 }
 
 .feed__user-profile {
-  --width:3.5rem;
+  --width: 3.5rem;
 
-  width:var(--width);
+  width: var(--width);
 }
 
 .feed__time {
-  font-size:1.1rem;
+  font-size: 1.1rem;
 }
 
 .feed__figure {
-  border-radius:0.8rem;
+  border-radius: 0.8rem;
 }
 
-
 .feed__likes-info {
-  --width:2.3rem;
-  --left-pos1:calc((var(--width) / 2) * -1);
-  --left-pos2:calc(var(--width) * -1);
+  --width: 2.3rem;
+  --left-pos1: calc((var(--width) / 2) * -1);
+  --left-pos2: calc(var(--width) * -1);
 }
 
 .likedby-profile {
-  width:var(--width);
+  width: var(--width);
 }
 
-.likedby-profile:nth-child(2){
-  left:var(--left-pos1);
+.likedby-profile:nth-child(2) {
+  left: var(--left-pos1);
 }
-.likedby-profile:nth-child(3){
-  left:var(--left-pos2);
+.likedby-profile:nth-child(3) {
+  left: var(--left-pos2);
 }
 
 .likes__description {
-  margin-inline-start:calc(var(--left-pos1) + var(--left-pos2) + 1rem);
+  margin-inline-start: calc(var(--left-pos1) + var(--left-pos2) + 1rem);
 }
