--- a/Styles/output.css
+++ b/Styles/output.css
@@ -59,12 +59,24 @@
   min-width: fit-content
 }
 
+.flex-1 {
+  flex: 1 1 0%
+}
+
 .shrink-0 {
   flex-shrink: 0
 }
 
+.grow {
+  flex-grow: 1
+}
+
 .cursor-pointer {
   cursor: pointer
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr))
 }
 
 .flex-col {
@@ -111,8 +123,16 @@
   gap: 1.75rem
 }
 
+.gap-2 {
+  gap: 0.5rem
+}
+
 .gap-8 {
   gap: 2rem
+}
+
+.gap-12 {
+  gap: 3rem
 }
 
 .overflow-hidden {
@@ -121,6 +141,16 @@
 
 .rounded-full {
   border-radius: 9999px
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity))
+}
+
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity))
 }
 
 .bg-cover {
@@ -136,6 +166,26 @@
      object-fit: cover
 }
 
+.pb-7 {
+  padding-bottom: 1.75rem
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem
+}
+
+.pb-4 {
+  padding-bottom: 1rem
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem
+}
+
+.text-center {
+  text-align: center
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem
@@ -144,6 +194,16 @@
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem
 }
 
 .font-bold {
@@ -160,4 +220,8 @@
 
 .uppercase {
   text-transform: uppercase
+}
+
+.capitalize {
+  text-transform: capitalize
 }
