--- a/Styles/reset.css
+++ b/Styles/reset.css
@@ -78,6 +78,6 @@ body {
   background: linear-gradient(var(--clr-body-bg));
   min-height: 100vh;
   min-height: 100dvh;
-  font-size: 1.4rem;
+  font-size: var(--fs-body);
   font-family: var(--ff-Poppins);
 }
