Desktop design completed

--- a/Styles/custom__utility__classes.css
+++ b/Styles/custom__utility__classes.css
@@ -10,6 +10,10 @@
   color:var(--clr-text-light);
 }
 
+.text-gray {
+  color:var(--clr-text-gray);
+}
+
 .primary-bg {
   background-color:var(--clr-primary-bg);
 }
