--- a/Styles/main__styles.css
+++ b/Styles/main__styles.css
@@ -1,4 +1,5 @@
 /* general styles */
+
 .wrapper-container {
   max-width: var(--wrapper-container-maxwidth);
   padding: var(--wrapper-container-padding);
@@ -65,7 +66,6 @@
 
 .main-container > .wrapper-container {
   grid-template-columns: var(--main-wrapper-columns);
-
   gap: var(--main-wrapper-gap);
 }
 
@@ -107,16 +107,16 @@
   transition: background-color 200ms ease, width 200ms ease;
 }
 
-/* .nav__item:first-child {
-  border-radius: calc(var(--sidebar-radius));
-} */
-
 .nav__item:is(:hover, :focus, :focus-visible) {
   background-color: var(--clr-secondary-bg);
 }
 
 .nav__item:is(:hover, :focus, :focus-visible)::before {
   width: 0.6rem;
+}
+
+.create__post-btn {
+  --btn-padding:1rem 3rem;
 }
 
 /* main content */
@@ -150,7 +150,7 @@
 }
 
 .post-input-wrapper {
-  padding: 1.3rem 0rem 1.3rem 6rem;
+  padding: 1.5rem 0rem 1.5rem 6rem;
   border-radius: 2rem;
 }
 .post-input-wrapper > .user-profile {
@@ -282,4 +282,15 @@
 
 .message-text {
   font-size: calc(var(--fs-body) - 0.1rem);
+}
+
+.request__user-profile {
+  --width:4.5rem;
+
+  width:var(--width);
+}
+
+.request-wrapper {
+  padding:var(--sidebar-padding-block) var(--sidebar-padding-inline);
+  border-radius:var(--sidebar-radius);
 }
