--- a/Styles/global__custom__properties.css
+++ b/Styles/global__custom__properties.css
@@ -1,11 +1,12 @@
 :root {
   /* spacings */
-  --wrapper-container-padding: 1rem 2rem;
+  --main-container-paddingblockstart: 7rem;
+  --main-container-padding-inline: 2rem;
+  --wrapper-container-padding-block: 1.5rem;
   --btn-padding: 0.8rem 3rem;
-  --main-container-padding-block:6rem;
 
-  --main-wrapper-gap: 1.5rem;
-  --main-wrapper-columns:0.4fr 1fr 0.4fr;
+  --main-wrapper-gap: 2rem;
+  --main-wrapper-columns: 0.4fr 1fr 0.4fr;
 
   --sidebar-padding-block: 1.3rem;
   --sidebar-padding-inline: 1.5rem;
@@ -16,18 +17,18 @@
   --header-searchbar-width: 40rem;
 
   /* typography */
-  --fs-body:1.4rem;
+  --fs-body: 1.4rem;
 
   --ff-Poppins: "Poppins", sans-serif;
 
   /* colors */
   --clr-body-bg: hsl(270, 29%, 95%), hsl(270, 6%, 81%);
   --clr-primary-bg: hsl(0, 100%, 100%);
-  --clr-secondary-bg:hsl(240, 17%, 94%);
+  --clr-secondary-bg: hsl(240, 17%, 94%);
   --clr-text-primary: hsl(0, 0%, 15%);
-  --clr-text-secondary:hsl(240, 5%, 80%)  ;
+  --clr-text-secondary: hsl(240, 5%, 80%);
   --clr-text-light: hsl(240, 5%, 70%);
-  --clr-text-gray:hsl(0,0%,60%);
+  --clr-text-gray: hsl(0, 0%, 60%);
 
   --clr-font-theme: hsl(241, 70%, 60%);
   --clr-primarybtn: hsl(250, 72%, 93%);
