--- a/Styles/main__styles.css
+++ b/Styles/main__styles.css
@@ -2,7 +2,7 @@
 
 .wrapper-container {
   max-width: var(--wrapper-container-maxwidth);
-  padding: var(--wrapper-container-padding);
+  padding-block: var(--wrapper-container-padding-block);
 }
 
 .sidebar:not(.primary-sidebar) {
@@ -14,6 +14,10 @@
 }
 
 /* header */
+.header > .wrapper-container {
+  padding-inline: var(--main-container-padding-inline);
+}
+
 .user-profile {
   --width: 4rem;
 
@@ -25,14 +29,6 @@
   width: var(--header-searchbar-width);
   padding: 0.8rem 0rem 0.8rem 5rem;
   border-radius: 1.6rem;
-}
-
-.search-icon {
-  --left-pos: 15px;
-  --top-pos: 36%;
-
-  left: var(--left-pos);
-  top: var(--top-pos);
 }
 
 /* notifications */
@@ -61,7 +57,8 @@
 
 /* main */
 .main-container {
-  padding-block-start: var(--main-container-padding-block);
+  padding-block-start: var(--main-container-paddingblockstart);
+  padding-inline: var(--main-container-padding-inline);
 }
 
 .main-container > .wrapper-container {
@@ -71,7 +68,9 @@
 
 /* primary sidebar */
 .primary-sidebar {
-  top: calc(var(--main-container-padding-block) + 1rem);
+  --top-pos: 8rem;
+
+  top: var(--top-pos);
 }
 
 .primary-sidebar .user-profile {
@@ -90,9 +89,11 @@
   padding-inline-start: 0 !important;
 }
 
-.sidebar-nav .nav__list .nav__item {
+.nav__item {
+  --padding-inline: 3rem 0.7rem;
+
   padding-block: calc(var(--sidebar-padding-block) * 1.3);
-  padding-inline: 3rem 0.7rem;
+  padding-inline: var(--padding-inline);
 }
 
 .nav__item::before {
@@ -116,7 +117,7 @@
 }
 
 .create__post-btn {
-  --btn-padding:1rem 3rem;
+  --btn-padding: 1rem 3rem;
 }
 
 /* main content */
@@ -153,6 +154,7 @@
   padding: 1.5rem 0rem 1.5rem 6rem;
   border-radius: 2rem;
 }
+
 .post-input-wrapper > .user-profile {
   --width: 3rem;
   --left-pos: 15px;
@@ -285,12 +287,115 @@
 }
 
 .request__user-profile {
-  --width:4.5rem;
+  --width: 4.5rem;
 
-  width:var(--width);
+  width: var(--width);
 }
 
 .request-wrapper {
-  padding:var(--sidebar-padding-block) var(--sidebar-padding-inline);
-  border-radius:var(--sidebar-radius);
+  padding: var(--sidebar-padding-block) var(--sidebar-padding-inline);
+  border-radius: var(--sidebar-radius);
+}
+
+/* media queries */
+
+@media (width < 1050px) {
+  :root {
+    --wrapper-container-maxwidth: 95rem;
+    --main-wrapper-columns: auto 1fr auto;
+
+    --header-searchbar-width: 35rem;
+  }
+
+  .user__info,
+  .nav__link,
+  .create__post-btn {
+    display: none;
+  }
+
+  .primary-sidebar {
+    --top-pos: 20rem;
+  }
+
+  .nav__item {
+    --padding-inline: 3rem 2rem;
+  }
+}
+
+@media (width < 900px) {
+  :root {
+    --wrapper-container-maxwidth: 80rem;
+    --main-wrapper-columns: auto 1fr;
+  }
+
+  .secondary-sidebar,
+  .header__searchbar-wrapper {
+    display: none;
+  }
+}
+
+@media (width < 700px) {
+  :root {
+    --wrapper-container-maxwidth: 60rem;
+    --main-wrapper-columns: 1fr auto;
+  }
+
+  .primary-sidebar {
+    grid-column: 2/3;
+    grid-row: 1/-1;
+  }
+
+  .content-section {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+  }
+}
+
+@media (width < 600px) {
+  :root {
+    --wrapper-container-maxwidth: 50rem;
+    --main-wrapper-columns: auto;
+  }
+
+  .stories {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .notification__wrapper,
+  .primary-sidebar {
+    position: fixed;
+  }
+
+  .primary-sidebar {
+    bottom: 0;
+    left: 0;
+    right: 0;
+    align-items: end;
+  }
+
+  .nav__list {
+    grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fit, minmax(min-content, auto));
+  }
+
+  .nav__item {
+    --padding-inline: 1rem;
+
+    padding-block: 1.3rem;
+  }
+
+  .notification__wrapper {
+    --top-pos: 50%;
+    --left-pos: 0%;
+    --notifications-width: 250px;
+
+    position: fixed;
+    transform: translate(0, -50%);
+  }
+}
+
+@media (width < 400px) {
+  :root {
+    --wrapper-container-maxwidth: 35 rem;
+  }
 }
